--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.41", features = ["derive"] }
+colored = { version = "3.0.0" }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
